# quizhub

./: .env.example  .gitattributes  .gitignore  LICENSE  Procfile  README.md  build.sh  pyproject.toml  pytest.ini  render.yaml
accounts/: admin.py  apps.py  forms.py  models.py  signals.py  social.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_creatorrequest.py  0003_userpreferences.py  0004_backfill_preferences.py
attempts/: admin.py  models.py  services.py  urls.py  views.py
attempts/migrations/: 0001_initial.py  0002_attempt_time_limit_expires_at.py
config/: asgi.py  env.py  urls.py  wsgi.py
config/django/: base.py  local.py  production.py
core/: context_processors.py  email.py  middleware.py  pagination.py
quizzes/: admin.py  forms.py  models.py  queries.py  stats.py  urls.py  views.py
quizzes/migrations/: 0001_initial.py  0002_quiz_time_limit_minutes.py  0003_category_tag_quiz_category_quiz_tags.py  0004_seed_categories.py  0005_quiz_results_released_at.py
templates/: 400.html  403.html  404.html  500.html  base.html
templates/account/: _social_buttons.html  email.html  email_confirm.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
templates/accounts/: creator_profile.html  creator_request_pending.html  creator_request_status.html  (+2 more)
tests/: conftest.py  factories.py  test_access.py  test_attempt_lifecycle.py  test_creator_request.py  test_quiz_state.py  test_scoring.py  test_tag_normalization.py
(+49 files in other folders)
