[project]
name = "django-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cookiecutter>=2.6.0",
    "django>=5.2.9",
    "django-allauth>=65.16.1",
    "django-browser-reload>=1.21.0",
    "django-environ>=0.12.0",
    "django-tailwind>=4.2.0",
    "honcho>=2.0.0",
    "psycopg2-binary>=2.9.11",
]
