[project]
name = "django-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cookiecutter>=2.6.0",
    "dj-database-url>=3.1.2",
    "django>=5.2.9",
    "django-allauth[socialaccount]>=65.16.1",
    "django-browser-reload>=1.21.0",
    "django-environ>=0.12.0",
    "django-htmx>=1.27.0",
    "django-tailwind>=4.2.0",
    "gunicorn>=26.0.0",
    "honcho>=2.0.0",
    "psycopg2-binary>=2.9.11",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]
